syntax = "proto3";

package com.lec.proto;

option java_package = "com.lec.proto";
option java_outer_classname = "StudentProto";
option java_multiple_files = true;

service StudentService {

    rpc GetRealNameByUsername (MyRequest) returns (MyResponse) {}

    rpc GetStudentByAge (StudentReq) returns (stream StudentRep) {}

    rpc GetStudentsWrapperByAges (stream StudentReq) returns (StudentRepList){}

    rpc BiTalk(stream StreamRequest) returns (stream StreamResponse) {}
}

message MyRequest {
    string username = 1;
}

message MyResponse {
    string realname = 2;
}

message StudentReq {
    int32 age = 1;
}

message StudentRep {
    string name = 1;
    int32 age = 2;
    string city = 3;
}

message StudentRepList {
    repeated StudentRep studentRep = 1;
}

message StreamRequest {
    string request_info = 1;
}
message StreamResponse {
    string response_info = 1;
}